--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
+/* :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
@@ -24,4 +24,18 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+} */
+
+
+
+@layer components{
+  .container{
+    @apply max-w-screen-sm md:max-w-screen-md lg:max-w-screen-lg xl:max-w-screen-xl mx-auto
+  }
+  .btn{
+    @apply rounded-md shadow-md px-4 py-2
+  }
+  .nav-link{
+    @apply px-2 md:px-4 py-2 rounded-md outline-2 outline-black shadow-sm hover:scale-105 transition-all ease-in font-semibold
+  }
 }
